# avr-hal-template

./: Cargo.toml  README-template.md  README.md  Ravedude.toml  cargo-generate.toml  rename-readme.rhai  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
