[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
{% case board -%}
  {%- when "Arduino Leonardo" -%}
    features = ["arduino-leonardo"]
  {%- when "Arduino Mega 2560" -%}
    features = ["arduino-mega2560"]
  {%- when "Arduino Nano" -%}
    features = ["arduino-nano"]
  {%- when "Arduino Uno" -%}
    features = ["arduino-uno"]
  {%- when "SparkFun ProMicro" -%}
    features = ["sparkfun-promicro"]
  {%- when "Nano168" -%}
    features = ["nano168"]
{%- endcase %}

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
{%- comment %}
# vim: ft=toml.jinja2
{% endcomment %}
