[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
{% case board -%}
  {%- when "Adafruit Trinket" -%}
    features = ["trinket"]
  {%- when "Adafruit Trinket Pro" -%}
    features = ["trinket-pro"]
  {%- when "Arduino Leonardo" -%}
    features = ["arduino-leonardo"]
  {%- when "Arduino Mega 2560" -%}
    features = ["arduino-mega2560"]
  {%- when "Arduino Mega 1280" -%}
    features = ["arduino-mega1280"]
  {%- when "Arduino Nano" -%}
    features = ["arduino-nano"]
  {%- when "Arduino Nano New Bootloader" -%}
    features = ["arduino-nano"]
  {%- when "Arduino Uno" -%}
    features = ["arduino-uno"]
  {%- when "SparkFun ProMicro" -%}
    features = ["sparkfun-promicro"]
  {%- when "SparkFun ProMini 3v3" -%}
    features = ["sparkfun-promini-3v3"]
  {%- when "SparkFun ProMini 5v" -%}
    features = ["sparkfun-promini-5v"]
  {%- when "Nano168" -%}
    features = ["nano168"]
{%- endcase %}

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
{%- comment %}
# vim: ft=toml.jinja2
{% endcomment %}
